# wasmcv

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md
components/c/: cv.c  cv.h
components/c/wasmcv/: README.md  imports.c  imports.h
components/rust/: cv.rs
components/rust/wasmcv/: Cargo.toml  LICENSE  README.md
components/rust/wasmcv/src/: cv.rs  imports.rs  lib.rs
components/tinygo/: cv.c  cv.go  go.mod
components/tinygo/cv/: cv.go  cv.h  go.mod
components/tinygo/wasm/cv/: go.mod  wasmcv.go
components/tinygo/wasm/cv/cv/: abi.go  cv.wit.go
components/tinygo/wasm/cv/mat/: mat.wit.go
components/tinygo/wasm/cv/net/: net.wit.go
docs/: imports.html  imports.md
examples/basic/: README.md  go.mod  go.sum  main.go
examples/basic/modules/: processor.wasm
examples/basic/modules/processor/: go.mod  go.sum  processor.go
examples/multi/: README.md  go.mod  go.sum  main.go
examples/multi/modules/: processc.wasm  processor.wasm  processrs.wasm
examples/multi/modules/processc/: README.md  build.sh  itoa.c  process.c
examples/multi/modules/processor/: README.md  go.mod  go.sum  processor.go
examples/multi/modules/processrs/: Cargo.toml  README.md
examples/multi/modules/processrs/.cargo/: config.toml
examples/multi/modules/processrs/src/: lib.rs
examples/wasmcam/: README.md  frame.go  go.mod  go.sum  main.go
examples/wasmcam/modules/: processor.wasm
examples/wasmcam/modules/processor/: go.mod  go.sum  processor.go
wit/: core.wit  dnn.wit  features2d.wit  imgproc.wit  mat.wit  objdetect.wit  request.wit  types.wit  world.wit
(+5 files in other folders)
