[package]
name = "wasmcv"
description = "Rust bindings for wasmCV computer vision interfaces based on WebAssembly."
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["opencv", "wasm", "wasi", "vision", "wasmcv"]
categories =["computer-vision", "wasm"]
authors = ["deadprogram <ron@hybridgroup.com>"]
repository = "https://github.com/wasmvision/wasmcv"
readme = "README.md"

[dependencies]
wit-bindgen = "0.43.0"

[lib]
path = "src/imports.rs"
crate-type = ["lib"]
